# manga_frame_extraction

./: .gitignore  README.md
MangaFrameExtraction/: CMakeLists.txt  fsp.cpp  fsp.h  main.cpp
